force-app/main/default/objects/Opportunity/fields/Primary_Referent_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Type__c</fullName>
    <label>Primary Referent Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>