force-app/main/default/objects/Opportunity/fields/Primary_Referent_Zip__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Zip__c</fullName>
    <label>Primary Referent Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>