force-app/main/default/objects/Opportunity/fields/Prior_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Prior_Treatment__c</fullName>
    <label>Prior Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>