force-app/main/default/objects/Opportunity/fields/Private_Pay__c.field-meta.xml
<CustomField>
    <fullName>Private_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Pay</label>
    <type>Checkbox</type>
</CustomField>