force-app/main/default/objects/Opportunity/fields/PRO_Follow_Up_Details__c.field-meta.xml
<CustomField>
    <fullName>PRO_Follow_Up_Details__c</fullName>
    <label>PRO Follow-Up Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>