force-app/main/default/objects/Opportunity/fields/Program_Requested__c.field-meta.xml
<CustomField>
    <fullName>Program_Requested__c</fullName>
    <label>Program Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly Support Group</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Intensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>