force-app/main/default/objects/Opportunity/fields/Projected_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Admission_Date__c</fullName>
    <label>Projected Admission Date</label>
    <type>Date</type>
</CustomField>