force-app/main/default/objects/Opportunity/fields/Projected_Admission_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Projected_Admission_Date_and_Time__c</fullName>
    <inlineHelpText>Date and Time the patient is expected to arrive at the facility for admission</inlineHelpText>
    <label>Projected Admission Date and Time</label>
    <type>DateTime</type>
</CustomField>