force-app/main/default/objects/Opportunity/fields/Reason_for_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closed_Lost__c</fullName>
    <label>Reason for Closed Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admitted to another facility</fullName>
            </value>
            <value>
                <fullName>Attempting Lower Level of Care</fullName>
            </value>
            <value>
                <fullName>Duplicate lead</fullName>
                <label>Duplicate Lead</label>
            </value>
            <value>
                <fullName>Financial – no insurance and no financial resources for treatment</fullName>
            </value>
            <value>
                <fullName>Financial or Insurance – Does Not Want a Referral</fullName>
            </value>
            <value>
                <fullName>Indigent</fullName>
            </value>
            <value>
                <fullName>Legal Issues</fullName>
            </value>
            <value>
                <fullName>Medicare/Medicaid only</fullName>
            </value>
            <value>
                <fullName>No response to our calls</fullName>
            </value>
            <value>
                <fullName>Refused further follow-up</fullName>
            </value>
            <value>
                <fullName>Refusing Treatment</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
            <value>
                <fullName>HC Program Full</fullName>
            </value>
            <value>
                <fullName>Refusing LOS</fullName>
            </value>
            <value>
                <fullName>Call transfer</fullName>
                <isActive>false</isActive>
                <label>Call transfer</label>
            </value>
            <value>
                <fullName>Not an admissions call</fullName>
                <isActive>false</isActive>
                <label>Not an admissions call</label>
            </value>
            <value>
                <fullName>Patient refusing treatment</fullName>
                <isActive>false</isActive>
                <label>Patient refusing treatment</label>
            </value>
            <value>
                <fullName>Wrong number</fullName>
                <isActive>false</isActive>
                <label>Wrong number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>