force-app/main/default/objects/Opportunity/fields/Referent__c.field-meta.xml
<CustomField>
    <fullName>Referent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Referent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Referent)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>