force-app/main/default/objects/Opportunity/fields/Referent_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Referent_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Referent Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Primary Referent Organization)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>