force-app/main/default/objects/Opportunity/fields/Referral_Information__c.field-meta.xml
<CustomField>
    <fullName>Referral_Information__c</fullName>
    <label>Referral Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 Step Contact</fullName>
            </value>
            <value>
                <fullName>211</fullName>
            </value>
            <value>
                <fullName>Alumni Channel</fullName>
            </value>
            <value>
                <fullName>Alumni of Facility</fullName>
            </value>
            <value>
                <fullName>Dr. Phil Show</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Facebook Referral</fullName>
            </value>
            <value>
                <fullName>Family / Friend</fullName>
            </value>
            <value>
                <fullName>Hanley Foundation / Board Member</fullName>
            </value>
            <value>
                <fullName>Healthcare Organization</fullName>
            </value>
            <value>
                <fullName>Healthcare Professional</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Interventionist</fullName>
            </value>
            <value>
                <fullName>IPN/PRN</fullName>
            </value>
            <value>
                <fullName>Legal Organization / Professional</fullName>
            </value>
            <value>
                <fullName>NOT YET KNOWN</fullName>
            </value>
            <value>
                <fullName>OBH Employee</fullName>
            </value>
            <value>
                <fullName>OBH Website</fullName>
            </value>
            <value>
                <fullName>Other- See Notes</fullName>
            </value>
            <value>
                <fullName>Palm Beach County FF</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Radio Advertisement</fullName>
            </value>
            <value>
                <fullName>Seminole Tribe of Florida</fullName>
            </value>
            <value>
                <fullName>Treatment Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>