force-app/main/default/objects/Opportunity/fields/Referral_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Recipient_Name__c</fullName>
    <label>Referral Recipient Name</label>
    <type>TextArea</type>
</CustomField>