force-app/main/default/objects/Opportunity/fields/Referred_out_Details__c.field-meta.xml
<CustomField>
    <fullName>Referred_out_Details__c</fullName>
    <label>Referred out Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>