force-app/main/default/objects/Opportunity/fields/Referred_Out_to_PRO_Details__c.field-meta.xml
<CustomField>
    <fullName>Referred_Out_to_PRO_Details__c</fullName>
    <description>This field is for team to add comments captured on activity section for the opportunity. this field will be added to email template for Referred out PRO process.</description>
    <label>Referred Out to PRO Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Can’t meet patient responsibility – needs in network</fullName>
            </value>
            <value>
                <fullName>Clinically denied – needs adolescent provider</fullName>
            </value>
            <value>
                <fullName>Clinically denied – needs eating disorder primary provider</fullName>
            </value>
            <value>
                <fullName>Clinically denied –needs psychiatric primary provider</fullName>
            </value>
            <value>
                <fullName>Financial - No out of network benefits – needs in network</fullName>
            </value>
            <value>
                <fullName>Medically denied – needs a higher level of care</fullName>
            </value>
            <value>
                <fullName>No SUD as primary diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>