force-app/main/default/objects/Opportunity/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Referred To)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>