force-app/main/default/objects/Opportunity/fields/Referred_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Email__c</fullName>
    <label>Referred to Email</label>
    <type>Email</type>
</CustomField>