force-app/main/default/objects/Opportunity/fields/Referred_to_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred to Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Referred to Organization)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>