force-app/main/default/objects/Opportunity/fields/Referred_to_Organization_City__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Organization_City__c</fullName>
    <label>Referred to Organization City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>