force-app/main/default/objects/Opportunity/fields/Referred_to_Organization_Owner__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Organization_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred to Organization Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>