force-app/main/default/objects/Opportunity/fields/Referred_to_Organization_State__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Organization_State__c</fullName>
    <label>Referred to Organization State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>