force-app/main/default/objects/Opportunity/fields/Referred_to_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Phone__c</fullName>
    <label>Referred to Phone</label>
    <type>Phone</type>
</CustomField>