force-app/main/default/objects/Opportunity/fields/Restrict_Record__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Record__c</fullName>
    <formula>Account.Restrict_Record__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restrict Record</label>
    <type>Checkbox</type>
</CustomField>