force-app/main/default/objects/Opportunity/fields/Returning_to_our_Care__c.field-meta.xml
<CustomField>
    <fullName>Returning_to_our_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returning to our Care</label>
    <type>Checkbox</type>
</CustomField>