force-app/main/default/objects/Opportunity/fields/Returning_to_Referrent__c.field-meta.xml
<CustomField>
    <fullName>Returning_to_Referrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returning to Referrent</label>
    <type>Checkbox</type>
</CustomField>