force-app/main/default/objects/Opportunity/fields/SA_Issues__c.field-meta.xml
<CustomField>
    <fullName>SA_Issues__c</fullName>
    <label>SA Issues</label>
    <type>TextArea</type>
</CustomField>