force-app/main/default/objects/Opportunity/fields/Search_Terms__c.field-meta.xml
<CustomField>
    <fullName>Search_Terms__c</fullName>
    <label>Search Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>