force-app/main/default/objects/Opportunity/fields/Second_PRO__c.field-meta.xml
<CustomField>
    <fullName>Second_PRO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second PRO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>