force-app/main/default/objects/Opportunity/fields/Secondary_Drug_of_Choice__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Drug_of_Choice__c</fullName>
    <label>Secondary Drug of Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Hallucinogen</fullName>
            </value>
            <value>
                <fullName>Inhalant</fullName>
            </value>
            <value>
                <fullName>Opioid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sedative / Hypnotic / Anxiolytic</fullName>
            </value>
            <value>
                <fullName>Stimulant</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>