force-app/main/default/objects/Opportunity/fields/Secondary_In_Network__c.field-meta.xml
<CustomField>
    <fullName>Secondary_In_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary In-Network</label>
    <type>Checkbox</type>
</CustomField>