force-app/main/default/objects/Opportunity/fields/Secondary_Insurance_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Group_ID__c</fullName>
    <label>Secondary Insurance Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>