force-app/main/default/objects/Opportunity/fields/Secondary_Insurance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Phone__c</fullName>
    <label>Secondary Insurance Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>