force-app/main/default/objects/Opportunity/fields/Secondary_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Opportunities (Secondary Insurance Provider)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>