force-app/main/default/objects/Opportunity/fields/Secondary_Referent_City__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referent_City__c</fullName>
    <label>Secondary Referent City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>