force-app/main/default/objects/Opportunity/fields/Secondary_Referent_Organization_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referent_Organization_Email__c</fullName>
    <label>Secondary Referent Organization Email</label>
    <type>Email</type>
</CustomField>