force-app/main/default/objects/Opportunity/fields/Secondary_Referent_Organization_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referent_Organization_Phone__c</fullName>
    <label>Secondary Referent Organization Phone</label>
    <type>Phone</type>
</CustomField>