force-app/main/default/objects/Opportunity/fields/Secondary_Referent_Organization_State__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referent_Organization_State__c</fullName>
    <label>Secondary Referent Organization State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>