force-app/main/default/objects/Opportunity/fields/Secondary_Referent_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referent_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Referent Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>