force-app/main/default/objects/Opportunity/fields/Secondary_Referent_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referent_Type__c</fullName>
    <label>Secondary Referent Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>