force-app/main/default/objects/Opportunity/fields/Secondry_Emergency_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondry_Emergency_First_Name__c</fullName>
    <label>Secondary Emergency First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>