force-app/main/default/objects/Opportunity/fields/Secondry_Emergency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondry_Emergency_Phone_Number__c</fullName>
    <label>Secondary Emergency Phone Number</label>
    <type>Phone</type>
</CustomField>